--- a/style.css
+++ b/style.css
@@ -79,9 +79,10 @@
 }
 
 body {
-    margin: 0;
+    margin: auto auto;
     padding: 1% 1%;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .navbar {
@@ -179,30 +180,31 @@ a.anchor {
 .slider_nav {
     background: rgba(25, 25, 25, 0.2);
     display: inline-block;
-    padding: 0px 0px 0px 0px;
-    border-radius: 4%;
+    padding: 20px 50px 20px 40px;
+    border-radius: 40%;
     border-right: 0;
     position: absolute;
 
 }
 
 .prev {
-    padding: 20px 10px 50px;
+    padding: 20px 10px 20px 50px;
     top: calc(50% - 20px);
-    left:0px;
+    left:-50px;
     color:white;
 }
 
 .next {
     padding: 20px 50px 20px 10px;
     top: calc(50% - 20px);
-    right: 0px;
+    right: -40px;
     color:white;
-    width:1%;
+    background-size: 100% 50%;
+    background-repeat: no-repeat;
 }
 
 .intro {
-    position: absolute;
+
     color: white;
     font-size:1em;
     width:40%;
@@ -213,6 +215,8 @@ a.anchor {
     left: 20%;
     -ms-transform: translate(-20%, -50%);
     transform: translate(-20%, -50%);
+    overflow:hidden;
+    clear:both;
 }
 
 .intro h1 {
@@ -220,7 +224,6 @@ a.anchor {
     font-family: Roboto-Bold;
     margin-bottom: 0.3%;
     font-size:2em;
-    width:100%;
 }
 
 .intro p {
@@ -228,9 +231,8 @@ a.anchor {
     font-size: 0.8em;
 }
 
-.intro a {
+.intro p * {
     background-color: #5CADD3;
-    width: 8vw;
     margin-top: 1%;
     text-align: center;
     color: white;
@@ -240,6 +242,8 @@ a.anchor {
     border-radius: 0.2em;
     text-decoration: none;
     border-bottom: 0.2em solid #2995BE;
+    width:20%;
+    overflow: hidden;
 }
 
 /*
@@ -763,27 +767,26 @@ ul.nav li a {
     
 .flex-row:nth-child(2) {
     flex:1;
+     margin:2% auto;
 }
 
-#courcont {
+.courcont {
     display: flex;
     flex-wrap: wrap;
-    justify-content:center;
-    align-items:center;
 }
 
-#courcont span {
+.doms {
     margin: 0% auto;
     font-family: Roboto-Bold;
     color:#000;
     line-height: 2em;
 }
 
-#courcont  * {
+.courcont  * {
     margin: 2% auto;
 }
     
-#courcont p {
+.courcont p {
     font-family: Roboto-Regular;
     color:rgb(110,110,110);
     font-size:1em;
@@ -908,7 +911,7 @@ a.act {
 }
 
 .gal {
-    padding: 2vh 5vw 0vh 1vw;
+    padding: 2vh 1vw 0vh 1vw;
     
 }
 
