--- a/style.css
+++ b/style.css
@@ -65,12 +65,7 @@
            url('./fonts/Roboto-Regular.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 
-@media print {
-    footer {page-break-after: always;}
-}
-@media print {
-    h1 {page-break-before: always;}
-}
+
 
 * {
     box-sizing: border-box;
@@ -154,6 +149,7 @@ ul.nav li.right {
     position: absolute;
     top:80px;
     left:0;
+    overflow-x: hidden;
     margin:0;
 }
 
@@ -168,17 +164,62 @@ a.anchor {
 }
 
 .slideshow-container {
-    background: url("./images/slider/bg1.jpg"); 
-    min-height: 548px;
-    background-position:top center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    width:100%;
+    max-width: 100%;
     position: relative;
+    margin: auto;
+    box-sizing: border-box;
+}
+
+.slideshow-container img {
+    vertical-align: middle;
+}
+
+.mySlides img {
+    width:100%;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 5px;
+    background: #66696C;
+    outline: none;
+    opacity: 0.9;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    position: absolute;
+    bottom: -1%;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15%;;
+    height: 5px;
+    opacity:1 !important;
+    float:left;
+    background: #5CADD3;
+    cursor: pointer;
+    position: absolute;
+    left:-10px;
+    bottom:0px;
+}
+
+.slider::-moz-range-thumb {
+    width: 100px;
+    height: 5px;
+    float: left;
+    opacity:1;
+    background: #5CADD3;
+    cursor: pointer;
 }
 
 .slider_nav {
-    background: rgba(25, 25, 25, 0.2);
+    background: rgba(25, 25, 25, 0.4);
     display: inline-block;
     padding: 20px 50px 20px 40px;
     border-radius: 40%;
@@ -199,8 +240,9 @@ a.anchor {
     top: calc(50% - 20px);
     right: -40px;
     color:white;
-    background-size: 100% 50%;
+    background-size: 100% 2%;
     background-repeat: no-repeat;
+    background-origin: content-box;
 }
 
 .intro {
@@ -212,9 +254,9 @@ a.anchor {
     margin: 0;
     position: absolute;
     top: 50%;
-    left: 20%;
-    -ms-transform: translate(-20%, -50%);
-    transform: translate(-20%, -50%);
+    left: 23%;
+    -ms-transform: translate(-23%, -50%);
+    transform: translate(-23%, -50%);
     overflow:hidden;
     clear:both;
 }
@@ -231,7 +273,7 @@ a.anchor {
     font-size: 0.8em;
 }
 
-.intro p * {
+.intro a {
     background-color: #5CADD3;
     margin-top: 1%;
     text-align: center;
@@ -246,66 +288,6 @@ a.anchor {
     overflow: hidden;
 }
 
-/*
-#arrowswrap  a.next {
-    position:absolute;
-    bottom:50;
-    right:0;
-}
-
-#arrowswrap  a.prev {
-    position:absolute;
-    left:0;
-}
-
-.half-circle-r {
-    width: 2em;
-    height: 4em;
-    background-color: rgba(0,0,0,0.4);
-    border-top-left-radius: 50px;
-    border-bottom-left-radius: 50px;
-    border-right: 0px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    position:relative;
-}
-
-.half-circle-l {
-    width: 2em;
-    height: 4em;
-    background-color: rgba(0,0,0,0.4);
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
-    border-left: 0px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    position:relative;
-}
-*/
-/*
-.prev,
-.next  {
-    position:absolute;
-    cursor: pointer; 
-    width: auto;
-    top:50%;
-    transform: translate(0%, -50%);
-    -ms-transform: translate(0%, -50%);
-    color: white;
-    font-size: 1em;
-    user-select: none;
-    margin:0;
-}
-
-.next {
-    right:0;
-}
-*/
-
-
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
     background-color: rgba(0, 0, 0, 0.8);
 }
@@ -348,7 +330,7 @@ a.anchor {
     flex:2;
 }
 
-#courcont {
+.courcont {
     display: flex;
     flex-wrap: nowrap;
         font-size: 1em;
@@ -356,7 +338,7 @@ a.anchor {
     color:rgb(110,110,110);
 }
 
-#courcont span {
+.doms {
     margin-left:0;
     font-family: Roboto-Bold;
     font-size: 1.1em;
@@ -364,12 +346,12 @@ a.anchor {
     line-height: 2em;
 }
 
-#courcont  * {
+.courcont  * {
     margin: auto 1%;
     padding: 2% 1%;
 }
 
-#courcont p {
+.courcont p {
     text-align: justify;
     width:100%;
 }
@@ -395,11 +377,9 @@ svg line {
 }
 
 
-
-
 svg  circle {
     stroke:white;
-    stroke-width:2px;
+    stroke-width:4px;
     fill:#45AED6;
 }
 
@@ -424,62 +404,53 @@ svg  circle {
 }
 
 .btncont {
-    width: 100%;
-    margin-left: 35%;
-    margin-right:35%;
-    margin-top:4%;
-    margin-bottom:4%;
-    display: flex;
     text-align: center;
-    vertical-align: middle;
-    background-color: rgb(210,210,210);
+    width: 30%;
+    margin: 2% auto ;
+    border-radius:13px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
+
 
 .btncont a {
-    background-color:#E5E5E5;
-    padding: 1.5vh 0.5vw;
-    width: 100%;
-    float: left;
-    border: none;
-    display: inline-block;
+    width:25%;
+    vertical-align: middle;
+    padding: 10px 10px;
+    background-color: rgba(210,210,210,0.7);
+    float:left;
+    color:rgb(100,100,100);
+    font-family: Roboto-medium;
+    font-size: 1em;
+}
+
+
+a.mainselected {
+    background-color: #5CADD3;
     text-align: center;
-    font-size: 1.1vw;
-    text-decoration: none;
-    font-family: Roboto-Regular;
-    color: rgb(76,76,76);
+    vertical-align: middle;
     position: relative;
-}
-
-.btncont, a.last {
-    border-top-right-radius: 6px;
-    border-bottom-right-radius: 6px;
-}
-
-a.act {
-    background-color: #5CADD3;
-    outline: none;
-    border-bottom: 2px solid 5CADD3;
     color: white;
+    border-bottom: 1px solid #468CAD;
 }
 
-.btncont a:hover {
-    background-color: #5CADD3;
+.mainselected:after {
+    content: ' ';  
+    width: 0;
+    height: 0;
+    display: inline-block;
+    border-left: 6px solid transparent; 
+    border-right: 6px solid transparent; 
+    border-top: 10px solid #5CADD3; 
+    position: relative;
+    margin-left:  -10px;
+    margin-right:  -10px;
+    left: -30px;
+    top:22px;
 }
-
-.btncont a:focus {
-    background-color: #5CADD3;
-    outline: none;
-    color: white;
-}
-
-#activ {
-    position: absolute;
-    left: 2.8vw;
-    top: 5.5vh;
-    text-align: center;
-	border-left: 1vw solid transparent;
-	border-right: 1vw solid transparent;
-	border-top: 1vh solid #5CADD3;
+.btncont a:not(:last-child) {
+    border-right: none; /* Prevent double borders */
 }
 
 
@@ -572,7 +543,7 @@ a.act {
 
 .footer {
     margin: 0% auto;
-    padding; 0;
+    padding: 0%;
     width:100%;
 }
 
@@ -635,7 +606,7 @@ a.act {
     margin: 5% 0 3%;
 }
 
-.contact legend p {
+.contact legend h4 {
     max-height: 10%;
     width: 100%;
     color: #64686D;
@@ -714,6 +685,11 @@ ul.nav li a {
 }
 
 @media screen and (max-width: 600px){
+    body {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
     .main {
         position:relative;
         top:40vh;
@@ -721,12 +697,90 @@ ul.nav li a {
 }
 
 @media screen and (max-width: 600px) {
-    .slideshow-container {
+    .slideshow-container, .intro {
         display: none;
+        visibility:hidden;
         z-index: -3;
     }
 }
 
+@media only screen and (min-width: 992px) {
+    .intro {
+    color: white;
+    font-size:1em;
+    width:40%;
+    height: auto;
+    margin: 0;
+        padding:5% 5%;
+    position: absolute;
+    top: 50%;
+    left: 23%;
+    -ms-transform: translate(-23%, -50%);
+    transform: translate(-23%, -50%);
+    overflow:hidden;
+    clear:both;
+}
+
+.intro h1 {
+    color: white;
+    font-family: Roboto-Bold;
+    margin-bottom: 0.3%;
+    font-size:1.5em;
+}
+
+.intro p {
+    font-family: Roboto-Regular;
+    font-size: 0.8em;
+}
+
+.intro a {
+    background-color: #5CADD3;
+    margin-top: 1%;
+    text-align: center;
+    color: white;
+    float: left;
+    font-size: 0.6em;
+    font-family: Roboto-Medium;
+    padding: 1% 3%;
+    border-radius: 0.2em;
+    text-decoration: none;
+    border-bottom: 0.2em solid #2995BE;
+    width:25%;
+    overflow: hidden;
+}
+
+}
+
+@media only screen and (min-width: 992px){
+    .flex-row:nth-child(1) {
+    margin-left:0%; 
+    flex:1;
+}
+
+.flex-row:nth-child(2) {
+    margin-top: 8%;
+    margin-left: 0%;
+    flex:2;
+}
+
+.doms {
+    margin: 0% auto;
+    font-family: Roboto-Bold;
+    color:#000;
+    line-height: 2em;
+}
+    
+.courcont {
+    display: flex;
+    flex-wrap: nowrap;
+    font-size: 1em;
+    font-family: Roboto-Regular;
+    text-align: justify;
+    color:rgb(110,110,110);
+    padding-bottom:1%;
+    padding-right:5%;
+}
+}
 @media screen and (max-width: 600px){
 
 .headlines {
@@ -776,7 +830,7 @@ ul.nav li a {
 }
 
 .doms {
-    margin: 0% auto;
+    margin: 0%;
     font-family: Roboto-Bold;
     color:#000;
     line-height: 2em;
@@ -834,7 +888,7 @@ ul.nav li a {
 .btncont {
     width:30%;
     margin:0% auto;
-    padding: 0% auto;
+    padding: 0%;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -846,7 +900,7 @@ ul.nav li a {
     width:100%;
     background-color: rgb(210,210,210);
     margin: 0px auto;
-    padding: 0% auto;
+    padding: 0%;
     display: inline-block;
     overflow: hidden;
     text-align: center;
@@ -857,25 +911,77 @@ ul.nav li a {
     color: rgb(126,126,126);
 }
     
-#activ {
-    position: absolute;
-    left: 50%;
-    top: 4.5vh;
+
+a.mainselected {
+    background-color: #5CADD3;
     text-align: center;
-	border-left: 1vw solid transparent;
-	border-right: 1vw solid transparent;
-	border-top: 2vh solid #5CADD3;
-    width:0;
-    height:0;   
+    vertical-align: middle;
+    position: relative;
+    color: white;
+    border-bottom: 1px solid #468CAD;
+}
+
+a.mainselected:after {
+    visibility: hidden;
+    display: none;
+}
+.btncont a:not(:last-child) {
+    border-right: none; /* Prevent double borders */
+}
+
+}
+
+@media only screen and (min-width: 992px){
+    .btncont {
+    width:40%;
+    margin:2% auto;
+    padding: 0% ;
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: row;
+    text-align: center;
+    vertical-align: middle;
+    border:none;
 }
     
-a.act {
-    background-color: #5CADD3;
-    outline: none;
-    border-bottom: 1px solid 5CADD3;
-    color: white;
-    }
+.btncont a {
+    width:100%;
+    height:100%;
+    background-color: rgb(210,210,210);
+    margin: 0px auto;
+    padding: 0% ;
+    display: inline-block;
+    overflow: hidden;
+    text-align: center;
+    font-size: 1em;
+    text-decoration: none;
+    border: none;
+    font-family: Roboto-Medium;
+    color: rgb(126,126,126);
 }
+    
+
+a.mainselected {
+    background-color: #5CADD3;
+    text-align: center;
+    vertical-align: middle;
+    position: relative;
+    color: white;
+    padding-bottom: 1%;
+}
+
+
+a.mainselected:after {
+    visibility: hidden;
+    display: none;
+
+}
+.btncont a:not(:last-child) {
+    border-right: none; /* Prevent double borders */
+}
+
+}
+
 
 @media screen and (max-width: 600px){
     .flex-row {
@@ -936,7 +1042,7 @@ a.act {
 @media screen and (max-width: 600px) {
 .footer {
     margin: 0% auto;
-    padding; 0;
+    padding: 0%;
     width:100%;
 }
 
@@ -947,7 +1053,7 @@ a.act {
 .carte {
     margin:0% auto; 
     width: 100%;
-    height: 660px;
+    max-height: 550px;
 }
 
 #mapover {
@@ -960,7 +1066,7 @@ a.act {
     left: 0px; 
 }
 
-iframe {
+.carte iframe {
     border:0;
 }
     
@@ -969,12 +1075,7 @@ iframe {
     width:100%;
     right:0%;
 }
-    
-.inlin {
-    
-}
-    
-
+ 
 
 #comp {
     font-family: Roboto-Medium;
@@ -985,7 +1086,7 @@ iframe {
     font-family: Roboto-Bold;
 }
 
-.inlin legend p {
+.inlin legend h4 {
     color: #64686D;
     font-family: Roboto-Regular;
 }
@@ -1029,3 +1130,9 @@ iframe {
 }
 
 
+@media print {
+    .footer {page-break-after: always;}
+}
+@media print {
+    h1 {page-break-before: always;}
+}
