--- a/style.css
+++ b/style.css
@@ -414,10 +414,10 @@ svg  circle {
 
 .btncont {
     text-align: center;
-    width: 30%;
+    width: 100%;
     margin: 4% auto;
     border-radius:13px;
-    padding:0% 1%;
+    padding:0% 30%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -425,6 +425,7 @@ svg  circle {
 
 
 .butt {
+    width: 100%;
     background-color: rgba(210,210,210,0.7);
     text-align: center;
     vertical-align: middle;
@@ -437,6 +438,7 @@ svg  circle {
 
 
 .mainselected {
+    width: 100%;
     background-color: #5CADD3;
     text-align: center;
     vertical-align: middle;
@@ -914,19 +916,20 @@ ul.nav li a {
 }
 
 .btncont {
-    width:30%;
+    width:100%;
     margin:0% auto;
-    padding: 0%;
+    padding: 0% auto;
     display: flex;
     flex-wrap: wrap;
     text-align: center;
     vertical-align: middle;
+    flex-direction: row;
     border:none;
 }
     
 .btncont a {
-    width:100%;
     background-color: rgb(210,210,210);
+    width:25%;
     margin: 0px auto;
     padding: 0%;
     display: inline-block;
@@ -953,13 +956,7 @@ a.mainselected:after {
     visibility: hidden;
     display: none;
 }
-.btncont a:not(:last-child) {
-    border-right: none; /* Prevent double borders */
 }
-
-}
-
-@media only screen and (min-width: 992px){
     
 
 @media screen and (max-width: 600px){
